--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="icon" href="{{ "/assets/images/favicon.ico" | prepend: site.baseurl }}">
   <link rel="shortcut icon" href="{{ "/assets/images/favicon.ico" | prepend: site.baseurl }}">
   <link href="{{ "/css/Merriweather.css" | prepend: site.baseurl }}" rel='stylesheet' type='text/css'>
   <link href="{{ "/css/Lato.css" | prepend: site.baseurl }}" rel='stylesheet' type='text/css'>
