--- a/css/main.sass
+++ b/css/main.sass
@@ -28,6 +28,9 @@ body
   font-family: $font-sans
   margin: 0
   padding: 0
+  background-color: #f5f5d5
+  word-spacing: -0.01em
+  line-height: 1.8em
   text-rendering: optimizeLegibility
   -webkit-font-smoothing: antialiased
   -moz-font-feature-settings: "liga=1, dlig=1"
