--- a/css/main.sass
+++ b/css/main.sass
@@ -41,9 +41,10 @@ body
 img
   width: $width
   max-width: 100%
-.highlight, .gist-syntax .highlight 
-    background-color: #f5f2f0;
-    color: #93a1a1;
+
+highlight, .gist-syntax .highlight 
+  background-color: #f5f2f0
+  color: #93a1a1
 
 .logo-readium
   position: fixed
