--- a/css/main.sass
+++ b/css/main.sass
@@ -452,8 +452,18 @@ img
       border: 0px solid #ddd
       border-top: 1px solid #ddd
     blockquote
+
       margin: 0 0 30px
-      border: none
+      / border: none
+      padding: 1em
+      background-color: #f5f2f0
+      border-radius: 1em
+      font-family: Consolas, Monaco, 'Andale Mono', monospace
+      border-width: 0.3em
+      border-color: #e0dfcc
+      border-style: solid
+      text-shadow: 0 1px white
+      overflow: auto;
       &:first-letter
         font-family: 'Monotype Corsiva', 'Apple Chancery', fantasy
         font-size  : 200%
