--- a/css/main.sass
+++ b/css/main.sass
@@ -28,7 +28,7 @@ body
   font-family: $font-sans
   margin: 0
   padding: 0
-  background-color: #f5f5d5
+  background-color: #f7f7f7
   word-spacing: -0.01em
   line-height: 1.8em
   text-rendering: optimizeLegibility
